mobile alignment fix

--- a/style.css
+++ b/style.css
@@ -211,7 +211,7 @@ nav ul li a:hover::after {
     color: white;
     text-decoration: none;
     padding: 10px 20px;
-    margin-right: 20px;
+    margin: 20px;
     border: 1px solid white;
 }
 
@@ -254,6 +254,11 @@ nav ul li a:hover::after {
     .title h1 {
         font-size: 8vw;
         line-height: 160px;
+    }
+
+    .row a {
+        margin: 0px;
+        margin-right: 20px;
     }
 
     .introduction {
